--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 4002",
     "build": "next build",
     "export": "next export",
-    "deploy": "npm run build && npm run export"
+    "deploy": "npm run build && npm run export -p 80"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "antd": "^3.26.7",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "easy-peasy": "^3.2.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
