--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "animate.css": "^3.7.2",
     "antd": "^3.26.7",
     "axios": "^0.19.1",
+    "babel-plugin-import": "^1.13.0",
     "bootstrap": "^4.4.1",
     "easy-peasy": "^3.2.6",
+    "less": "^3.10.3",
+    "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.1.7",
@@ -30,5 +33,8 @@
     "react-progressbar.js": "^0.2.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "@zeit/next-less": "^1.0.1"
   }
 }
