UPDATE Added new packages.

--- a/package.json
+++ b/package.json
@@ -13,21 +13,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@casl/ability": "^3.4.0",
+    "@casl/react": "^1.0.4",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "animate.css": "^3.7.2",
-    "antd": "^3.26.7",
+    "antd": "^4.0.0",
     "axios": "^0.19.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "bootstrap": "^4.4.1",
+    "cleave.js": "^1.5.4",
+    "cloudinary-react": "^1.3.2",
     "easy-peasy": "^3.2.6",
     "less": "^3.10.3",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "next": "^9.1.7",
-    "next-images": "^1.3.0",
+    "next-images": "^1.3.1",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.9.3",
@@ -37,9 +44,8 @@
     "react-sortable-tree": "^2.7.1",
     "react-sortable-tree-theme-minimal": "0.0.14",
     "redux": "^4.0.5",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.0.1"
   },
-  "devDependencies": {
-    "@zeit/next-less": "^1.0.1"
-  }
+  "devDependencies": {}
 }
