--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@casl/ability": "^3.4.0",
     "@casl/react": "^1.0.4",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "animate.css": "^3.7.2",
-    "antd": "^4.0.0",
+    "antd": "^4.1.0",
     "axios": "^0.19.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
@@ -26,17 +27,20 @@
     "bootstrap": "^4.4.1",
     "cleave.js": "^1.5.4",
     "cloudinary-react": "^1.3.2",
-    "easy-peasy": "^3.2.6",
-    "less": "^3.10.3",
+    "dayjs": "^1.8.23",
+    "easy-peasy": "^3.3.0",
+    "less": "^3.11.1",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "next": "^9.1.7",
+    "next": "^9.3.3",
     "next-images": "^1.3.1",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dom": "^16.13.1",
     "react-hook-form": "^4.9.3",
     "react-nestable": "^1.3.0",
     "react-progressbar.js": "^0.2.0",
@@ -47,5 +51,7 @@
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-loader": "^0.6.0"
+  }
 }
