--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@casl/ability": "^3.4.0",
-    "@casl/react": "^1.0.4",
+    "@casl/ability": "^4.1.0",
+    "@casl/react": "^2.1.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "animate.css": "^3.7.2",
-    "antd": "^4.1.0",
+    "antd": "^4.2.4",
     "axios": "^0.19.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
@@ -33,7 +33,7 @@
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "next": "^9.3.3",
+    "next": "^9.4.2",
     "next-images": "^1.3.1",
     "node-sass": "^4.14.0",
     "prop-types": "^15.7.2",
@@ -43,11 +43,13 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^4.9.3",
     "react-nestable": "^1.3.0",
+    "react-progress-2": "^4.4.3",
     "react-progressbar.js": "^0.2.0",
     "react-redux": "^7.1.3",
     "react-sortable-tree": "^2.7.1",
     "react-sortable-tree-theme-minimal": "0.0.14",
     "redux": "^4.0.5",
+    "sass": "^1.26.5",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.0.1"
   },
