--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "less": "^3.11.1",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "next": "^9.4.2",
-    "next-images": "^1.3.1",
+    "next-images": "^1.4.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -42,6 +42,7 @@
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^4.9.3",
+    "react-moment": "^0.9.7",
     "react-nestable": "^1.3.0",
     "react-progress-2": "^4.4.3",
     "react-progressbar.js": "^0.2.0",
