UPDATE Menu fixes

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_API_URL="http://localhost:3026/api/v1"
-# NEXT_PUBLIC_API_URL="https://staging.umana.co:3026/api/v1"
+NEXT_PUBLIC_API_URL_PRODUCTION="https://staging.umana.co:3029/api/v1"
+NEXT_PUBLIC_API_URL_DEVELOP="http://localhost:3026/api/v1"
 NEXT_PUBLIC_APP_TITLE=" | Umana admin"
 NEXT_PUBLIC_APP_CLOUDINARY="https://api.cloudinary.com/v1_1/umana-storage"
-NEXT_PUBLIC_APP_ENV="development"
+NEXT_PUBLIC_APP_ENV="develop"
