--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@casl/ability": "^4.1.0",
     "@casl/react": "^2.1.0",
+    "animate.css": "^4.1.1",
     "antd": "^4.6.4",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
