UPDATE add environments

--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,5 @@ NEXT_PUBLIC_API_URL_PRODUCTION="http://localhost:3026/api/v1"
 #NEXT_PUBLIC_API_URL_DEVELOP="http://localhost:3026/api/v1"
 NEXT_PUBLIC_APP_TITLE=" | Umana admin"
 NEXT_PUBLIC_APP_CLOUDINARY="https://api.cloudinary.com/v1_1/umana-storage"
+NEXT_PUBLIC_APP_FILE_STORAGE="https://storage.umana.co:30012"
 NEXT_PUBLIC_APP_ENV="develop"
