--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@casl/react": "^2.1.0",
     "animate.css": "^4.1.1",
     "antd": "^4.7.0",
+    "antd-img-crop": "^3.12.0",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "cleave.js": "^1.6.0",
