--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@casl/ability": "^4.1.0",
     "@casl/react": "^2.1.0",
+    "@tinymce/tinymce-react": "^3.8.1",
     "antd": "^4.7.0",
     "antd-img-crop": "^3.12.0",
     "axios": "^0.19.1",
